# python-project-template

./: .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  config.ini  pyproject.toml
docs/jupyter_execute/notebooks/: example2.ipynb  nb_example.ipynb
docs/source/: conf.py  index.rst
docs/source/notebooks/: blocks.rst  index.rst  nb_example.ipynb
docs/source/report/: abstract.rst  acknowledgements.rst  discussion.rst  index.rst  introduction.rst  methods.rst  references.rst  results.rst
src/PythonProject/: __init__.py  __main__.py
src/PythonProject/report/: overleaf.py
src/PythonProject/shell/: __init__.py  messages.py  shell.py
tests/: __init__.py
